# MeldMC-Installer

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.cpp  main.go
.github/workflows/: build.yml  cmake-multi-platform.yml
c++/: CMakeLists.txt  conandata.yml  conanfile.py  main.cpp
internal/gui/: mainwindow.go
internal/http/: client.go
internal/installer/: installer.go
internal/types/: types.go
java/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
java/src/main/java/net/coosanta/meldmc/installer/: MeldInstaller.java  Version.java
